// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeviceListItem snapshot test should match snapshot when user is authenticated, but not the creator of the device 1`] = `
<div
  className="device-list-item-container"
>
  <div
    className="device-list-item-shadow device-list-item-shadow-left device-list-item-shadow-left-first"
  />
  <div
    className="device-list-item-shadow device-list-item-shadow-right device-list-item-shadow-right-first"
  />
  <img
    alt="device-list-item-image"
    className="device-list-item-image"
    src="test-file-stub"
  />
  <div
    className="device-list-item"
  >
    <p>
      not matching with id in authentication state
    </p>
    <button
      className="device-list-item-opaque-text"
    >
      deviceReportBroken
    </button>
    <button
      className="device-list-item-opaque-text"
      data-testid="deleteDeviceButton"
      onClick={[Function]}
    >
      deleteDevice
    </button>
  </div>
</div>
`;

exports[`DeviceListItem snapshot test should match snapshot when user is not authenticated 1`] = `
<div
  className="device-list-item-container"
>
  <div
    className="device-list-item-shadow device-list-item-shadow-left device-list-item-shadow-left-first"
  />
  <div
    className="device-list-item-shadow device-list-item-shadow-right device-list-item-shadow-right-first"
  />
  <img
    alt="device-list-item-image"
    className="device-list-item-image"
    src="test-file-stub"
  />
  <div
    className="device-list-item"
  >
    <p>
      i should render without delete button
    </p>
    <button
      className="device-list-item-opaque-text"
    >
      deviceReportBroken
    </button>
  </div>
</div>
`;

exports[`DeviceListItem snapshot test should match snapshot with error 1`] = `
<div
  className="device-list-item-container"
>
  <div
    className="device-list-item-shadow device-list-item-shadow-left device-list-item-shadow-left-first"
  />
  <div
    className="device-list-item-shadow device-list-item-shadow-right device-list-item-shadow-right-first"
  />
  <img
    alt="device-list-item-image"
    className="device-list-item-image"
    src="test-file-stub"
  />
  <div
    className="device-list-item"
  >
    <p>
      i should render with delete button
    </p>
    <button
      className="device-list-item-opaque-text"
    >
      deviceReportBroken
    </button>
    <button
      className="device-list-item-opaque-text"
      data-testid="deleteDeviceButton"
      onClick={[Function]}
    >
      deleteDevice
    </button>
  </div>
</div>
`;
